# stumpy2

./: DEVELOPER.md  README.md  ideas  protocol
StumpyEditor/: .project
music/: CMakeLists.txt  TODO  chordcon.h  globals.cpp  globals.h  main.cpp  midi.cpp  midi.h  perlin.h
music/components/: chord.cpp  control.cpp  data.cpp  env.cpp  generators.cpp  generators.h  math.cpp  output.cpp  players.cpp  scaledata.h  sequencers.cpp  state.cpp  test.cpp  time.cpp  time.cpp#  util.h
music/doc/: body.tex  build  control.tex  data.tex  generators.tex  main.tex  math.tex  music.tex  state.tex  time.tex
music/example/: README  darkice.cfg  example.lscp  jackmixer  jackrack  kill.sh  salciseim.plb  setup.sh  setupstream.sh  silkpad.xmz  slowpad.xmz
music/example2/: README  darkice.cfg  enigmatic.plb  example.lscp  kill.sh  mixer.scd  setup.sh  setupstream.sh  silkpad.xmz
music/overseer/: README  bells.scd  belltest.scd  jackmix  jackmixer  kill.sh  overseer.plb  overseer.pls  setup.sh  setupstream.sh  test.ang
music/piano/: config  darkice.cfg  setup.sh  setup1.plb  setup1.pls  setupstream.sh
music/soft/: config  darkice.cfg  setup.sh  setup1.plb  setup1.pls  setupstream.sh  soft.xmz
qtserver/: README  glwidget.cpp  glwidget.h  main.cpp  qtserver.pro  serverbase
qtserver/components/: add.cpp  clock.cpp  (+20 more)
serverbase/: CMakeLists.txt  bitfield.h  component.h  controller.cpp  controller.h  errors.cpp  errors.h  instances.h  intkeyedhash.h  list.h  model.cpp  model.h  param.h  patch.h  readfile.cpp  server.cpp  server.h  stdConns.cpp  stdConns.h  test.cpp  timer.h
(+227 files in other folders)
